...
            "state" : "translated",
            "value" : "用戶端與伺服器版本不一致，暫時無法修改聯絡人。"
          }
        }
      }
    },
    "demo.imessage.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "دردشة بنمط iMessage"
...
            "value" : "Photos"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "照片"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "照片"
...
            "value" : "عريض"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bold"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "粗体"
...
            "value" : "تنسيق النص"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Text Format"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "文本格式"
...
